Adds scala counter demo pprogram to the project: